<resources>
    <string name="app_name">MovieTrailers</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="str_trailers">Trailers</string>

    <string name="str_no_trailers">There are no Trailers!</string>

    <string name="str_remove_trailer">Remove</string>
    <string name="str_back">Back</string>
    <string name="str_add_trailer">Add Trailer</string>
    <string name="str_test">Test</string>

    <string name="str_youtube_id">Youtube ID</string>
    <string name="str_movie_name">Movie Name</string>
    <string name="str_movie_description">Movie Description</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_trailer_view">TrailerViewActivity</string>
    <string name="title_activity_trailer_add">TrailerAddActivity</string>
</resources>
